Fix team layout when jumping to section via fragment id fixes #18

--- a/css/style.css
+++ b/css/style.css
@@ -2978,7 +2978,7 @@ font-weight: 300;
 }
 
 #text-15.widget.widget_text {
-padding-top: 60px;
+padding-top: 95px;
 }
 
 #text-15:hover a {
